--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
         <section>
             <h2>Czym się zajmujemy</h2>
             <div>
-                <img src="/images/Main/box1.jpg"
+                <img src="images/Main/box1.jpg"
                 alt="box 1 - coding"
                 width="370"
                 height="294">
             </div>
             <div>
-                <img src="/images/Main/box2.jpg"
+                <img src="images/Main/box2.jpg"
                 alt="box 2 - conceptions"
                 width="370"
                 height="294">
             </div>
             <div>
-                <img src="/images/Main/box3.jpg"
+                <img src="images/Main/box3.jpg"
                 alt="box 3 - design"
                 width="370"
                 height="294">
@@ -69,7 +69,7 @@
         <section>
             <h2>Nasz zespół</h2>
             <div>
-                <img src="/images/Main/team_card_1.jpg"
+                <img src="images/Main/team_card_1.jpg"
                 alt="Product Designer"
                 width="270"
                 height="260">
@@ -77,7 +77,7 @@
                 <p>Product Designer</p>
             </div>
             <div>
-                <img src="/images/Main/team_card_2.jpg"
+                <img src="images/Main/team_card_2.jpg"
                 alt="Frontend Developer"
                 width="270"
                 height="260">
@@ -85,7 +85,7 @@
                 <p>Frontend Developer</p>
             </div>
             <div>
-                <img src="/images/Main/team_card_3.jpg"
+                <img src="images/Main/team_card_3.jpg"
                 alt="Marketing"
                 width="270"
                 height="260">
@@ -93,7 +93,7 @@
                 <p>Marketing</p>
             </div>
             <div>
-                <img src="/images/Main/team_card_4.jpg"
+                <img src="images/Main/team_card_4.jpg"
                 alt="UI Designer"
                 width="270"
                 height="260">
