--- a/index.html
+++ b/index.html
@@ -20,92 +20,94 @@
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+48111111111">+48 111 111 111</a></li>
             </ul>
-        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługe</button>
     </header>
     <main>
+        <!-- Sekcja Baner -->
+        <section>
+            <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+            <button type="button">Zamów usługe</button>
+        </section>
+
         <!-- Sekcja LOREM IPSUM - Nasze atuty -->
         <section>
-            <div>
-                <p>LOREM IPSUM</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-            </div>
-            <div>
-                <p>LOREM IPSUM</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-            </div>
-            <div>
-                <p>LOREM IPSUM</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-            </div>
-            <div>
-                <p>LOREM IPSUM</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-            </div>
+           <ul>
+                <li>LOREM IPSUM</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
+            </ul>
+            <ul>
+                <li>LOREM IPSUM</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
+            </ul>
+            <ul>
+                <li>LOREM IPSUM</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
+            </ul>
+            <ul>
+                <li>LOREM IPSUM</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
+            </ul>
         </section>
         <!-- Sekcja - Czym się zajmujemy -->
         <section>
             <h2>Czym się zajmujemy</h2>
-            <div>
-                <img src="images/Main/box1.jpg"
+            <ul>
+                <li><img src="images/Main/box1.jpg"
                 alt="box 1 - coding"
                 width="370"
                 height="294">
-            </div>
-            <div>
-                <img src="images/Main/box2.jpg"
+                </li>
+                <li><img src="images/Main/box2.jpg"
                 alt="box 2 - conceptions"
                 width="370"
                 height="294">
-            </div>
-            <div>
-                <img src="images/Main/box3.jpg"
+                </li>
+                <li><img src="images/Main/box3.jpg"
                 alt="box 3 - design"
                 width="370"
                 height="294">
-            </div>
+                </li>
+            </ul>
         </section>
         <!-- Sekcja - Nasz zespół -->
         <section>
             <h2>Nasz zespół</h2>
-            <div>
-                <img src="images/Main/team_card_1.jpg"
+            <ul>
+                <li><img src="images/Main/team_card_1.jpg"
                 alt="Product Designer"
                 width="270"
-                height="260">
-                <p>John Doe</p>
-                <p>Product Designer</p>
-            </div>
-            <div>
-                <img src="images/Main/team_card_2.jpg"
+                height="260"></li>
+                <li>John Doe</li>
+                <li>Product Designer</li>
+            </ul>
+            <ul>
+                <li><img src="images/Main/team_card_2.jpg"
                 alt="Frontend Developer"
                 width="270"
                 height="260">
-                <p>John Doe</p>
-                <p>Frontend Developer</p>
-            </div>
-            <div>
-                <img src="images/Main/team_card_3.jpg"
+                <li>John Doe</li>
+                <li>Frontend Developer</li>
+            </ul>
+            <ul>
+                <li><img src="images/Main/team_card_3.jpg"
                 alt="Marketing"
                 width="270"
-                height="260">
-                <p>John Doe</p>
-                <p>Marketing</p>
-            </div>
-            <div>
-                <img src="images/Main/team_card_4.jpg"
+                height="260"></li>
+                <li>John Doe</li>
+                <li>Marketing</li>
+            </ul>
+            <ul>
+                <li><img src="images/Main/team_card_4.jpg"
                 alt="UI Designer"
                 width="270"
-                height="260">
-                <p>John Doe</p>
-                <p>UI Designer</p>
-            </div>
+                height="260"></li>
+                <li>John Doe</li>
+                <li>UI Designer</li>
+            </ul>
         </section>
     </main>
     <footer>
         <a href="#">WebStudio</a>
         <address>
-            
             <ul>
                 <li><a href="https://goo.gl/maps/QuRZALvSsucPEKKi7" target="_blank">m. Warszawa, Aleje Jerozolimskie 21</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
