--- a/index.html
+++ b/index.html
@@ -31,20 +31,21 @@
         <!-- Sekcja LOREM IPSUM - Nasze atuty -->
         <section>
            <ul>
-                <li>LOREM IPSUM</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
-            </ul>
-            <ul>
-                <li>LOREM IPSUM</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
-            </ul>
-            <ul>
-                <li>LOREM IPSUM</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
-            </ul>
-            <ul>
-                <li>LOREM IPSUM</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
+                <li><h2>LOREM IPSUM</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+                </li>
+                <li>
+                    <h2>LOREM IPSUM</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+                </li>
+                <li>
+                    <h2>LOREM IPSUM</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+                </li>
+                <li>
+                    <h2>LOREM IPSUM</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+                </li>
             </ul>
         </section>
         <!-- Sekcja - Czym się zajmujemy -->
@@ -71,37 +72,32 @@
         <!-- Sekcja - Nasz zespół -->
         <section>
             <h2>Nasz zespół</h2>
-            <ul>
                 <li><img src="images/Main/team_card_1.jpg"
                 alt="Product Designer"
                 width="270"
-                height="260"></li>
-                <li>John Doe</li>
-                <li>Product Designer</li>
-            </ul>
-            <ul>
+                height="260">
+                <p>John Doe</p>
+                <p>Product Designer</p>
+                </li>
                 <li><img src="images/Main/team_card_2.jpg"
                 alt="Frontend Developer"
                 width="270"
                 height="260">
-                <li>John Doe</li>
-                <li>Frontend Developer</li>
-            </ul>
-            <ul>
+                <p>John Doe</p>
+                <p>Frontend Developer</p>
+                </li>
                 <li><img src="images/Main/team_card_3.jpg"
                 alt="Marketing"
                 width="270"
-                height="260"></li>
-                <li>John Doe</li>
-                <li>Marketing</li>
-            </ul>
-            <ul>
+                height="260">
+                <p>John Doe</p>
+                <p>Marketing</p></li>
                 <li><img src="images/Main/team_card_4.jpg"
                 alt="UI Designer"
                 width="270"
-                height="260"></li>
-                <li>John Doe</li>
-                <li>UI Designer</li>
+                height="260">
+                <p>John Doe</p>
+                <p>UI Designer</p></li>
             </ul>
         </section>
     </main>
